[package]
name = "warp-git"
version = "0.1.0"
authors = ["k3d3 <k@3d3.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
http = "0.2.4"
hyper = { version = "0.14.9", features = ["stream"] }
tokio = { version = "1.7.0", features = ["full"] }
bytes = "1.0.1"
